--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ body{
   color: white;
   font-family: 'Crete Round', serif;
 }
+
+h1{
+  font-size: 100pt
+}
+
+h2{
+  font-size: 50pt
+}
+
+h3{
+  font-size: 40pt
+}
